--- a/client/components/table/Table.css
+++ b/client/components/table/Table.css
@@ -72,3 +72,34 @@
   .delete-btn {
     color: #e10d05;
   }
+
+  .paginationBtn {
+    display: flex;
+    justify-content: center;
+    margin-top: 15px;
+  }
+
+  .previosBtn{
+    margin-right: 5px;
+  }
+  .nextBtn{
+    margin-left: 5px;
+  }
+
+  .btn{
+    
+    color:#fff;
+    background-color: #141414;
+    border: 1px solid rgba(54, 54, 54, 0.6);
+    font-weight: 600;
+    position: relative;
+    outline: none;
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    height: 45px;
+    width: 130px;
+    opacity: 1;
+  }
