--- a/client/components/table/Table.css
+++ b/client/components/table/Table.css
@@ -87,7 +87,7 @@
   }
 
   .btn{
-    
+    margin: 5px;
     color:#fff;
     background-color: #141414;
     border: 1px solid rgba(54, 54, 54, 0.6);
