--- a/client/components/login-form/loginForm.module.scss
+++ b/client/components/login-form/loginForm.module.scss
@@ -6,7 +6,7 @@
     flex-direction: column;
     gap: 20px;
     height: 100vh;
-    font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+    // font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
     background-color: #f8f9fd;
   }
   
@@ -18,6 +18,7 @@
   }
   
   .login_form {
+    margin-top: 144px;
     background-color: white;
     padding: 2rem;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
