--- a/client/components/signUp/signUp.module.scss
+++ b/client/components/signUp/signUp.module.scss
@@ -6,11 +6,9 @@
   flex-direction: column;
   gap: 20px;
   height: 100vh;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  // font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   background-color: #f8f9fd;
 }
-
-
 
 .button_container {
   display: flex;
@@ -18,6 +16,7 @@
 }
 
 .signup_form {
+  margin-top: 144px;
   background-color: white;
   padding: 2rem;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -41,7 +40,7 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
-  margin: 10px;
+  margin-top: 20px;
 
   input[type="text"],
 input[type="password"] {
